--- a/model/model_building.ipynb
+++ b/model/model_building.ipynb
@@ -2,28 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c85a5241",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjoblib\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_wine\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
-    "import joblib\n",
     "import pandas as pd\n",
+    "import joblib\n",
+    "\n",
     "from sklearn.datasets import load_wine\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
     "\n",
+    "# Load Wine dataset\n",
     "wine = load_wine()\n",
     "df = pd.DataFrame(wine.data, columns=wine.feature_names)\n",
     "df['cultivar'] = wine.target\n",
     "\n",
+    "# Select 6 features\n",
     "features = [\n",
     "    'alcohol',\n",
     "    'malic_acid',\n",
@@ -36,28 +47,54 @@
     "X = df[features]\n",
     "y = df['cultivar']\n",
     "\n",
+    "# Train-test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    random_state=42,\n",
+    "    stratify=y\n",
     ")\n",
     "\n",
+    "# Pipeline: Scaling + Model\n",
     "pipeline = Pipeline([\n",
     "    ('scaler', StandardScaler()),\n",
-    "    ('model', RandomForestClassifier(n_estimators=200, random_state=42))\n",
+    "    ('classifier', RandomForestClassifier(\n",
+    "        n_estimators=200,\n",
+    "        random_state=42\n",
+    "    ))\n",
     "])\n",
     "\n",
+    "# Train model\n",
     "pipeline.fit(X_train, y_train)\n",
     "\n",
+    "# Evaluate\n",
     "y_pred = pipeline.predict(X_test)\n",
+    "\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
+    "# Save model\n",
     "joblib.dump(pipeline, 'wine_cultivar_model.pkl')\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
